# decimal_for_cpp

./: CMakeLists.txt  README.md  README.txt
.github/workflows/: action.yml  linux.yml
decimal_for_cpp/include/: decimal.h
doc/: license.txt
include/: decimal.h
tests/: decimalTest.cpp  decimalTest.ipp  decimalTestAbout.cpp  decimalTestArithmetic.cpp  decimalTestDiv.cpp  decimalTestEdgeCases.cpp  decimalTestIo.cpp  decimalTestIo.ipp  decimalTestModulo.cpp  decimalTestMult.cpp  decimalTestMultDiv.cpp  decimalTestRoundOth.cpp  decimalTestRounding.cpp  decimalTestString.cpp  decimalTestTypeLevel.cpp  decimalTestUtils.cpp  decimalTestUtils.h  decimalTestWithExponent.cpp  multiplicationTest.cpp  runner.cpp
